# dl_ai_finetuning_llms

./: 01_Why_finetuning_lab_student.ipynb  02_Where_finetuning_fits_in_lab_student.ipynb  03_Instruction_tuning_lab_student.ipynb  README.md  pyproject.toml
